added live link to readme

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             I'm a 30 year old millenial graduate of Michigan State University. <br>
             Upon gradauation I worked as VP of Operations for two Natural Stone Companies. <br>
             Currently furthing my education into the world of tech... by attending Northwestern University Full Stack
-            Coding Bootcamp
+            Coding Bootcamp!
         </p>
     </div>
 </body>
