--- a/projects.html
+++ b/projects.html
@@ -28,16 +28,16 @@
         </div>
         <br>
         <div class="card" style="width: 18rem;">
-            <img src="#" class="card-img-top"
+            <img src="./assets/images/Screen Shot 2022-10-24 at 10.21.55 AM.png" class="card-img-top"
                 alt="screen shot of website">
             <div class="card-body">
-                <h5 class="card-title">Project 2</h5>
-                <p class="card-text">Input Text</p>
-                <a href="#" class="btn btn-primary">View Website</a>
+                <h5 class="card-title">TeamSpeak</h5>
+                <p class="card-text">Created a full stack application to enhance team building!</p>
+                <a href="https://teamspeak-org.herokuapp.com/" class="btn btn-primary">View Website</a>
             </div>
         </div>
         <br>
-        <div class="card" style="width: 18rem;">
+        <!-- <div class="card" style="width: 18rem;">
             <img src="#" class="card-img-top"
                 alt="screen shot of website">
             <div class="card-body">
@@ -45,7 +45,7 @@
                 <p class="card-text">Input Text</p>
                 <a href="#" class="btn btn-primary">View Website</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
