revised typos in description

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1 class="display-1">Roy B. Logan</h1>
         <p>Hello, I'm Roy Logan.<br>
             <br>
-            I'm a 30 year old millenial graduate of Michigan State University. <br>
-            Upon gradauation I worked as VP of Operations for two Natural Stone Companies. <br>
-            Currently furthing my education into the world of tech... by attending Northwestern University Full Stack
+            I'm a 30 year old millennial graduate of Michigan State University. <br>
+            Upon graduation I worked as VP of Operations for two Natural Stone Companies. <br>
+            Currently furthering my education into the world of tech... by attending Northwestern University Full Stack
             Coding Bootcamp!
         </p>
     </div>
