--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         <h1 class="display-1">Roy B. Logan</h1>
         <p>Hello, I'm Roy Logan.<br>
             <br>
-            I'm a 30 year old millennial graduate of Michigan State University. <br>
-            Upon graduation I worked as VP of Operations for two Natural Stone Companies. <br>
-            Currently furthering my education into the world of tech... by attending Northwestern University Full Stack
-            Coding Bootcamp!
+            Full Stack Professional and Former VP of Operations for Chicago Mable Company.<br> 
+            Trained at Northwestern University earning a certificate in Full Stack Web Development.<br>  
+            Innovative collaborator  passionate about company and team goals. Leveraging my <br>
+            previous 6 years experience in leadership and growth of Chicago Marble Company in order to
+            creatively serve the tech industry.  Ability to work in fast-paced and diverse <br>
+            environments while developing solutions and exceeding expectations.<br> 
         </p>
     </div>
 </body>
